# hypergen

./: .gitignore  README.md  TROUBLESHOOTING.md  asset-manifest.json  ddg.py  index.html  package-lock.json  pyproject.toml  requirements.txt  run_with_anaconda.sh  setup.cfg  setup_env.sh  start.sh
backend/: .env.example  README.md  requirements.txt  server.py  test_api.py
backend/results/cache/: None-None-llm  None-None-search
backend/results/report-4de0147c-d5fe-4a6d-b88d-b713b3028b9a/: input.jsonl  result.jsonl  run.sh
backend/results/report-9a975677-ed68-42c5-8735-5553e4c9be88/: input.jsonl  result.jsonl  run.sh
backend/results/story-062750ba-69ef-4de9-8410-a38fa5f9b145/: input.jsonl  result.jsonl  run.sh
docs/: asset-manifest.json  manifest.json
docs/static/css/: main.00f0642c.css
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
recursive/: __init__.py  api_key.env.example  cache.py  engine.py  graph.py  memory.py  test_run_report.sh  test_run_story.sh
recursive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
recursive/agent/: __init__.py  agent_base.py  proxy.py
recursive/eval/: calculate_elo.py  novel_gsb.py  report_eval.py  run_novel.sh  run_report_eval.sh
recursive/executor/: __init__.py  schema.py
recursive/llm/: llm.py
recursive/utils/: display.py  file_io.py  get_index.py  register.py
static/css/: main.00f0642c.css.map
static/js/: 466.70c73c34.chunk.js  466.70c73c34.chunk.js.map  501.1958578d.chunk.js  501.1958578d.chunk.js.map  57.cb08d33d.chunk.js  main.22284c5e.js  main.2f0af582.js  main.2f698b19.js  main.63f011e6.js  main.63f011e6.js.LICENSE.txt  main.95b4722d.js  main.af80fae6.js
test_data/: meta_fiction.jsonl  qa_test.jsonl  story_test.jsonl
(+82 files in other folders)
