[project]
name = "hypergen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "overrides>=7.4.0",
    "class_registry",
    "griffe",
    "duckduckgo_search",
    "loguru",
    "langchain_text_splitters",
    "trafilatura",
    "tqdm",
    "python-dotenv",
    "dill",
    "botocore",
    "boto3",
    "urllib3",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "google-generativeai>=0.3.0",
    "requests>=2.28.2",
    "flask==2.0.1",
    "werkzeug==2.0.3",
    "flask-cors==3.0.10",
    "gunicorn==20.1.0",
    "flask_socketio",
    "langchain",
    "langchain_community",
    "pytest",
    "gradio"
]
